Changes for 1.4.21
- turn off yet more DNS debug messages (forward<>reverse query error)
- oper hostmasking no longer pollutes IPHASH (ouch)
- configure script reworked to search better for libgmp.a
- configure script bugs fixed

Changes for 1.4.20
- /whois works correctly for hostmasked opers. growl.
- configure gives more information about gmp errors.

Changes for 1.4.19 (released, but not an advised upgrade)
- Fixed a crashing bug with /whois
- Fixed a crashing bug with /oper (I need to remember how to handle nulls correctly :)
- Imported res fixes from bahamut-stable
- made configure work for solaris to find gmp

Changes for 1.4.18 (never officially released)
- Changed level of some debug messages to not go to all opers

Changes for 1.4.17 (never officially released)
- Oper hostmasking:
  Your I: line password is oper<.password> where password is optional.
  You then /server <yourserver> <yourport> <portpass:>opernick:operpass
  Anyone +A can see your real username, host, and IP.

Changes for 1.4.16
- deal with long-time buffer overflow when more than MAXADDR
  A DNS answers are received.

Changes for 1.4.15 (never officially released)
- Crash in res.c fixed (due to wrong question received under heavy load)
- name resolution prevents ircd dns cache pollution

Changes for 1.4.14 (previous release was 1.4.12)
- RC4 streaming encryption added, diffie hellman key exchange
  - Requires GMP library
  - Vulnerable to man-in-the-middle attacks
  - Requires 'E' flag in the N: line on both servers.
- zlib-compressed links added
  - Requires 'Z' flag in the N: line of a server
    that wishes to zip outgoing links to that link.

Changes for 1.4.12 (previous release was 1.4.8):
- /stats ?, v fixed to hide u-lined servers
- /lusers fixed to hide u-lined servers
- name resolution is more strict